# backend

install/: local_setup.sh  setup.sh
install/my_camera_pkg/lib/my_camera_pkg/: camera_node
install/my_camera_pkg/share/my_camera_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_camera_pkg/share/my_camera_pkg/cmake/: my_camera_pkgConfig.cmake
install/ps5_controller/lib/ps5_controller/: ps5_controller_node
install/ps5_controller/share/ps5_controller/: package.bash  package.sh  package.xml  package.zsh
install/twowd_robot_bringup/share/twowd_robot_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/twowd_robot_bringup/share/twowd_robot_bringup/cmake/: twowd_robot_bringupConfig.cmake
install/twowd_robot_bringup/share/twowd_robot_bringup/launch/: twowd_robot_gazebo.launch.xml
install/twowd_robot_description/share/twowd_robot_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/my_camera_pkg/: CMakeLists.txt
src/my_camera_pkg/src/: camera_node.cpp
src/ps5_controller/: setup.py
src/twowd_robot_bringup/: CMakeLists.txt
src/twowd_robot_description/: CMakeLists.txt
src/twowd_robot_description/launch/: display.launch.py
src/twowd_robot_description/urdf/: camera.xacro  twowd_robot.urdf.xacro
(+8 files in other folders)
